--- a/ClientSide/index.html
+++ b/ClientSide/index.html
@@ -22,7 +22,7 @@
 </head>
 
 <body>
-    <header>
+    <header class="fixed-top">
         <nav class="navbar navbar-expand-sm navbar-light bg-light">
             <a class="navbar-brand" href="index.html">
                 <img src="Pictures/c. b..svg" width="30" height="30" alt="">
@@ -72,8 +72,8 @@
     </main>
 
 
-    <footer>
-        
+    <footer class="fixed-bottom">
+        <h1>Hure</h1>
     </footer>
 </body>
 
