--- a/ClientSide/index.html
+++ b/ClientSide/index.html
@@ -22,7 +22,7 @@
 </head>
 
 <body>
-    <header class="fixed-top">
+    <header>
         <nav class="navbar navbar-expand-sm navbar-light bg-light">
             <a class="navbar-brand" href="index.html">
                 <img src="Pictures/c. b..svg" width="30" height="30" alt="">
@@ -63,18 +63,10 @@
 
 
     <main class="container">
-        <div class="col">
-            <div class="row" style="background-color: red;"><h1></h1></div>
-            <div class="row"><h1></h1></div>
-            <div class="row"><h1></h1></div>
-            <div class="row" style="background-color:blue;"><h1></h1></div>
-        </div>
+        
     </main>
 
-
-    <footer class="fixed-bottom">
-        <h1>Hure</h1>
-    </footer>
+    <img src="Pictures/cola.png" alt="">
 </body>
 
 </html>
