--- a/ClientSide/shop.html
+++ b/ClientSide/shop.html
@@ -5,9 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-        <link rel="stylesheet" href="stylesheet.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="stylesheet.css">
     <title>Home</title>
 </head>
 
@@ -19,9 +18,9 @@
             </a>
             <div class="collapse navbar-collapse">
                 <ul class="navbar-nav">
-                    <li class="nav-item nav-item2"><a class="nav-link" href="#">Hallo</a></li>
-                    <li class="nav-item nav-item2"><a class="nav-link" href="#">Shop</a></li>
-                    <li class="nav-item nav-item2"><a class="nav-link" href="#">Account</a></li>
+                    <li class="nav-item nav-item2"><a class="nav-link" href="index.html">Hallo</a></li>
+                    <li class="nav-item nav-item2"><a class="nav-link" href="shop.html">Shop</a></li>
+                    <li class="nav-item nav-item2"><a class="nav-link" href="account.html">Account</a></li>
                 </ul>
             </div>
         </nav>
@@ -30,6 +29,15 @@
 
     <main>
 
+        <p>
+            Fanta
+            <br>
+            <img src="/ClientSide/Pictures/Fanta.png" alt="fanta">
+            <form action="/ClientSide/phpscripts/addToBasket.php" method="post">
+                <button type="submit" class="btn btn-primary">add to Basket</button>
+            </form>
+        </p>
+
     </main>
 
 
@@ -37,5 +45,7 @@
 
     </footer>
 </body>
+
+</html>
 
 </html>
