--- a/ClientSide/index.html
+++ b/ClientSide/index.html
@@ -5,14 +5,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="stylesheet.css">
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <title>Home</title>
+    <title>Welcome</title>
 
     <script>
-        $(document).ready(function() {
-            $("#navbarDropdown").click(function() {
+        $(document).ready(function () {
+            $("#navbarDropdown").click(function () {
                 $(".dropdown-menu").toggle();
             })
         });
@@ -28,21 +29,27 @@
             </a>
             <div class="collapse navbar-collapse width">
                 <ul class="navbar-nav mr-auto">
-                    <li class="nav-item nav-item2 btn-hovereffect rounded-pill"><a class="nav-link" href="index.html">Welcome</a></li>
-                    <li class="nav-item nav-item2 btn-hovereffect rounded-pill"><a class="nav-link" href="shop.html">Shop</a>
+                    <li class="nav-item nav-item2 btn-hovereffect rounded-pill active-btn"><a class="nav-link"
+                            href="index.html">Welcome</a></li>
+                    <li class="nav-item nav-item2 btn-hovereffect rounded-pill"><a class="nav-link"
+                            href="shop.html">Shop</a>
                     </li>
-                    <li class="nav-item nav-item2 btn-hovereffect rounded-pill"><a class="nav-link" href="account.html">Account</a>
+                    <li class="nav-item nav-item2 btn-hovereffect rounded-pill"><a class="nav-link"
+                            href="account.html">Account</a>
                     </li>
                 </ul>
                 <ul class="navbar-nav ml-auto icon-resize">
                     <li class="dropdown nav-item nav-item2" style="margin-top: 10px;">
-                        <a href=""><img src="Pictures/Icon material-account-circle.svg" alt="" style="max-width: 80%; max-height:80%"></a>
+                        <a href=""><img src="Pictures/Icon material-account-circle.svg" alt=""
+                                style="max-width: 80%; max-height:80%"></a>
                     </li>
                     <li class="dropdown nav-item nav-item2" style="margin-top: 7px;">
-                        <a href=""><img src="Pictures/Icon awesome-shopping-basket.svg" alt="" style="max-width: 80%; max-height:80%"></a>
+                        <a href=""><img src="Pictures/Icon awesome-shopping-basket.svg" alt=""
+                                style="max-width: 80%; max-height:80%"></a>
                     </li>
                     <li class="nav-item dropdown nav-item2" style="margin-top: 4px;">
-                        <a class="nav-link" href="#" id="navbarDropdown" role="button" aria-haspopup="true" aria-expanded="false">
+                        <a class="nav-link" href="#" id="navbarDropdown" role="button" aria-haspopup="true"
+                            aria-expanded="false">
                             <img src="Pictures/Icon feather-menu.svg" alt="" style="max-width: 80%; max-height:80%">
                         </a>
                         <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
@@ -55,15 +62,10 @@
             </div>
         </nav>
     </header>
-
-
-
-
+    
     <main class="container">
-
+        
     </main>
-
-    <img src="Pictures/cola.png" alt="">
 </body>
 
 </html>
