--- a/ClientSide/index.html
+++ b/ClientSide/index.html
@@ -62,10 +62,19 @@
             </div>
         </nav>
     </header>
-    
-    <main class="container">
-        
+
+    <main class="row" style="width: 100vw; height: 100vh;">
+        <div class="col-3" style="background-color: antiquewhite;">
+            <img src="Pictures/Pfad 6.svg" alt="" id="index-img-down-right" style="display: block;">
+        </div>
+        <div class="col-6" style="background-color: aqua;">
+            <img src="Pictures/smiley.png" alt="">
+        </div>
+        <div class="col-3" style="background-color: aquamarine;">
+            <img src="Pictures/Pfad 7.svg" alt="">
+        </div>
     </main>
 </body>
+
 
 </html>
