--- a/ClientSide/index.html
+++ b/ClientSide/index.html
@@ -27,7 +27,9 @@
             <a class="navbar-brand" href="index.html">
                 <img src="Pictures/c. b..svg" width="30" height="30" alt="">
             </a>
-            <a href="index.php">PHP</a>
+
+            <a href="phpscripts/index.php">PHP</a>
+
             <div class="collapse navbar-collapse width">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item nav-item2 btn-hovereffect rounded-pill active-btn"><a class="nav-link"
