--- a/ClientSide/index.html
+++ b/ClientSide/index.html
@@ -28,7 +28,7 @@
                 <img src="Pictures/c. b..svg" width="30" height="30" alt="">
             </a>
 
-            <a href="phpscripts/index.php">PHP</a>
+            <!-- <a href="phpscripts/index.php">PHP</a> -->
 
             <div class="collapse navbar-collapse width">
                 <ul class="navbar-nav mr-auto">
@@ -67,14 +67,14 @@
     </header>
 
     <main class="row" style="width: 100vw; height: 100vh;">
-        <div class="col-3" style="background-color: antiquewhite;">
-            <img src="Pictures/Pfad 6.svg" alt="" id="index-img-down-right" style="display: block;">
+        <div class="col-3" id="index-left-img">
+            
         </div>
-        <div class="col-6" style="background-color: aqua;">
-            <img src="Pictures/smiley.png" alt="">
+        <div class="col-6" style="text-align: center;">
+            <img src="Pictures/smiley.png" alt="" id="index-main-img">
         </div>
-        <div class="col-3" style="background-color: aquamarine;">
-            <img src="Pictures/Pfad 7.svg" alt="">
+        <div class="col-3" id="index-right-backimg">
+
         </div>
     </main>
 </body>
