--- a/ClientSide/index.html
+++ b/ClientSide/index.html
@@ -68,13 +68,27 @@
 
     <main class="row" style="width: 100vw; height: 100vh;">
         <div class="col-3" id="index-left-img">
-            
+            <div id="index-left-logo">
+                <p style="text-align: center;">
+                    <span id="index-left-logo-CandyBay"><b>Candy Bay</b></span>
+                    <br>
+                    <span id="index-left-logo-subtext">Du Hund</span>
+                </p>
+            </div>
         </div>
-        <div class="col-6" style="text-align: center;">
+
+        <div class="col-6" id="index-main">
             <img src="Pictures/smiley.png" alt="" id="index-main-img">
         </div>
-        <div class="col-3" id="index-right-backimg">
 
+        <div class="col-3" id="index-right-backimg">
+            <div id="index-right-textblock">
+                <p id="index-right-textblock">
+                    <span id="index-right-textblock-title">Learn more</span>
+                    <br>
+                    <span id="index-right-textblock-text">Lorem Ipsum</span>
+                </p>
+            </div>
         </div>
     </main>
 </body>
