--- a/ClientSide/shop.html
+++ b/ClientSide/shop.html
@@ -27,6 +27,9 @@
             <a class="navbar-brand" href="index.html">
                 <img src="Pictures/c. b..svg" width="30" height="30" alt="">
             </a>
+
+            <!-- <a href="phpscripts/index.php">PHP</a> -->
+
             <div class="collapse navbar-collapse width">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item nav-item2 btn-hovereffect rounded-pill"><a class="nav-link"
@@ -63,12 +66,10 @@
         </nav>
     </header>
 
-
-
-
-    <main class="container">
+    <main class="row" style="width: 100vw; height: 100vh;">
         
     </main>
 </body>
+
 
 </html>
