--- a/ClientSide/index.html
+++ b/ClientSide/index.html
@@ -87,8 +87,9 @@
                     <span id="index-right-textblock-title">Learn more</span>
                     <br>
                     <span id="index-right-textblock-text">
-                        Wir sind die besten oder so aber fragen sie uns nicht wie gut oder so auf jeden fall
-                        sind wir einfach die Besten. Wir sind die besten oder so.
+                        Wir sind ein Webshop, welches sehr qualitative Getränke verkauft.
+                        Wir haben alle nötigen Lizensen, um solch qualitativ gute und 
+                        gesunde Getränke verkaufen zu können.
                     </span>
                 </p>
             </div>
