--- a/ClientSide/account.html
+++ b/ClientSide/account.html
@@ -32,7 +32,7 @@
                     <li class="nav-item nav-item2 btn-hovereffect rounded-pill"><a class="nav-link"
                             href="index.html">Welcome</a></li>
                     <li class="nav-item nav-item2 btn-hovereffect rounded-pill"><a class="nav-link"
-                            href="shop.html">Shop</a>
+                            href="phpscripts/index.php">Shop</a>
                     </li>
                     <li class="nav-item nav-item2 btn-hovereffect rounded-pill active-btn"><a class="nav-link"
                             href="account.html">Account</a>
