--- a/ClientSide/index.html
+++ b/ClientSide/index.html
@@ -5,15 +5,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="stylesheet.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@300;400;600&display=swap" rel="stylesheet">
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <title>Welcome</title>
 
     <script>
-        $(document).ready(function () {
-            $("#navbarDropdown").click(function () {
+        $(document).ready(function() {
+            $("#navbarDropdown").click(function() {
                 $(".dropdown-menu").toggle();
             })
         });
@@ -30,27 +32,21 @@
 
             <div class="collapse navbar-collapse width">
                 <ul class="navbar-nav mr-auto">
-                    <li class="nav-item nav-item2 btn-hovereffect rounded-pill active-btn"><a class="nav-link"
-                            href="index.html">Welcome</a></li>
-                    <li class="nav-item nav-item2 btn-hovereffect rounded-pill"><a class="nav-link"
-                            href="shop.html">Shop</a>
+                    <li class="nav-item nav-item2 btn-hovereffect rounded-pill active-btn"><a class="nav-link" href="index.html">Welcome</a></li>
+                    <li class="nav-item nav-item2 btn-hovereffect rounded-pill"><a class="nav-link" href="shop.html">Shop</a>
                     </li>
-                    <li class="nav-item nav-item2 btn-hovereffect rounded-pill"><a class="nav-link"
-                            href="account.html">Account</a>
+                    <li class="nav-item nav-item2 btn-hovereffect rounded-pill"><a class="nav-link" href="account.html">Account</a>
                     </li>
                 </ul>
                 <ul class="navbar-nav ml-auto icon-resize">
                     <li class="dropdown nav-item nav-item2" style="margin-top: 10px;">
-                        <a href=""><img src="Pictures/Icon material-account-circle.svg" alt=""
-                                style="max-width: 80%; max-height:80%"></a>
+                        <a href=""><img src="Pictures/Icon material-account-circle.svg" alt="" style="max-width: 80%; max-height:80%"></a>
                     </li>
                     <li class="dropdown nav-item nav-item2" style="margin-top: 7px;">
-                        <a href=""><img src="Pictures/Icon awesome-shopping-basket.svg" alt=""
-                                style="max-width: 80%; max-height:80%"></a>
+                        <a href=""><img src="Pictures/Icon awesome-shopping-basket.svg" alt="" style="max-width: 80%; max-height:80%"></a>
                     </li>
                     <li class="nav-item dropdown nav-item2" style="margin-top: 4px;">
-                        <a class="nav-link" href="#" id="navbarDropdown" role="button" aria-haspopup="true"
-                            aria-expanded="false">
+                        <a class="nav-link" href="#" id="navbarDropdown" role="button" aria-haspopup="true" aria-expanded="false">
                             <img src="Pictures/Icon feather-menu.svg" alt="" style="max-width: 80%; max-height:80%">
                         </a>
                         <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
@@ -70,7 +66,7 @@
                 <p style="text-align: center;">
                     <span id="index-left-logo-CandyBay"><b>Candy Bay</b></span>
                     <br>
-                    <span id="index-left-logo-subtext">Text</span>
+                    <span id="index-left-logo-subtext">Sweets that make you melt</span>
                 </p>
             </div>
         </div>
@@ -85,9 +81,10 @@
                     <span id="index-right-textblock-title">Learn more</span>
                     <br>
                     <span id="index-right-textblock-text">
-                        Wir sind ein Webshop, welches sehr qualitative Getränke verkauft.
-                        Wir haben alle nötigen Lizensen, um solch qualitativ gute und 
-                        gesunde Getränke verkaufen zu können.
+                        Wir sind ein Webshop, welcher Süssigkeiten und Getränke verkauft. <br>
+                        Hier findest du Artikel aus verschiedenen Ländern und Orten. <br>
+                        Wir freuens uns schon auf ihre Bestellung.
+                        
                     </span>
                 </p>
             </div>
