--- a/ClientSide/shop.html
+++ b/ClientSide/shop.html
@@ -5,15 +5,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="stylesheet.css">
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <title>Welcome</title>
 
     <script>
-        $(document).ready(function () {
-            $("#navbarDropdown").click(function () {
+        $(document).ready(function() {
+            $("#navbarDropdown").click(function() {
                 $(".dropdown-menu").toggle();
             })
         });
@@ -32,27 +31,21 @@
 
             <div class="collapse navbar-collapse width">
                 <ul class="navbar-nav mr-auto">
-                    <li class="nav-item nav-item2 btn-hovereffect rounded-pill"><a class="nav-link"
-                            href="index.html">Welcome</a></li>
-                    <li class="nav-item nav-item2 btn-hovereffect rounded-pill active-btn"><a class="nav-link"
-                            href="shop.html">Shop</a>
+                    <li class="nav-item nav-item2 btn-hovereffect rounded-pill"><a class="nav-link" href="index.html">Welcome</a></li>
+                    <li class="nav-item nav-item2 btn-hovereffect rounded-pill active-btn"><a class="nav-link" href="shop.html">Shop</a>
                     </li>
-                    <li class="nav-item nav-item2 btn-hovereffect rounded-pill"><a class="nav-link"
-                            href="account.html">Account</a>
+                    <li class="nav-item nav-item2 btn-hovereffect rounded-pill"><a class="nav-link" href="account.html">Account</a>
                     </li>
                 </ul>
                 <ul class="navbar-nav ml-auto icon-resize">
                     <li class="dropdown nav-item nav-item2" style="margin-top: 10px;">
-                        <a href=""><img src="Pictures/Icon material-account-circle.svg" alt=""
-                                style="max-width: 80%; max-height:80%"></a>
+                        <a href=""><img src="Pictures/Icon material-account-circle.svg" alt="" style="max-width: 80%; max-height:80%"></a>
                     </li>
                     <li class="dropdown nav-item nav-item2" style="margin-top: 7px;">
-                        <a href=""><img src="Pictures/Icon awesome-shopping-basket.svg" alt=""
-                                style="max-width: 80%; max-height:80%"></a>
+                        <a href=""><img src="Pictures/Icon awesome-shopping-basket.svg" alt="" style="max-width: 80%; max-height:80%"></a>
                     </li>
                     <li class="nav-item dropdown nav-item2" style="margin-top: 4px;">
-                        <a class="nav-link" href="#" id="navbarDropdown" role="button" aria-haspopup="true"
-                            aria-expanded="false">
+                        <a class="nav-link" href="#" id="navbarDropdown" role="button" aria-haspopup="true" aria-expanded="false">
                             <img src="Pictures/Icon feather-menu.svg" alt="" style="max-width: 80%; max-height:80%">
                         </a>
                         <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
@@ -67,7 +60,36 @@
     </header>
 
     <main class="row" style="width: 100vw; height: 100vh;">
-        
+
+
+        <div id="product-grid">
+            <div class="txt-heading">Products</div>
+            <?php
+            require_once("phpscripts/index.php");
+            $product_array = $db_handle->runQuery("SELECT * FROM inventory ORDER BY Item_ID ASC");
+            if (!empty($product_array)) {
+                foreach($product_array as $key=>$value){
+                    ?>
+                <div class="product-item">
+                    <form method="post" action="index.php?action=add&code=<?php echo $product_array[$key][" ItemCode "]; ?>">
+                        <!-- <div class="product-image"><img src="<?php echo $product_array[$key]["ItemImage"]; ?>"></div> -->
+                        <div class="product-tile-footer">
+                            <div class="product-title">
+                                <?php echo $product_array[$key]["ItemName"]; ?>
+                            </div>
+                            <div class="product-price">
+                                <?php echo $product_array[$key]["ItemPrice"]."fr"; ?>
+                            </div>
+                            <div class="cart-action"><input type="text" class="product-quantity" name="quantity" value="1" size="2" /><input type="submit" value="Add to Cart" class="btnAddAction" /></div>
+                        </div>
+                    </form>
+                </div>
+                <?php
+                }
+            }
+            ?>
+        </div>
+
     </main>
 </body>
 
