--- a/ClientSide/index.html
+++ b/ClientSide/index.html
@@ -33,7 +33,7 @@
             <div class="collapse navbar-collapse width">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item nav-item2 btn-hovereffect rounded-pill active-btn"><a class="nav-link" href="index.html">Welcome</a></li>
-                    <li class="nav-item nav-item2 btn-hovereffect rounded-pill"><a class="nav-link" href="shop.html">Shop</a>
+                    <li class="nav-item nav-item2 btn-hovereffect rounded-pill"><a class="nav-link" href="phpscripts/index.php">Shop</a>
                     </li>
                     <li class="nav-item nav-item2 btn-hovereffect rounded-pill"><a class="nav-link" href="account.html">Account</a>
                     </li>
