--- a/ClientSide/index.html
+++ b/ClientSide/index.html
@@ -51,7 +51,7 @@
                         </a>
                         <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
                             <a class="dropdown-item" href="index.html">Welcome</a>
-                            <a class="dropdown-item" href="shop.html">Shop</a>
+                            <a class="dropdown-item" href="phpscripts/index.php">Shop</a>
                             <a class="dropdown-item" href="account.html">Account</a>
                         </div>
                     </li>
