--- a/ClientSide/account.html
+++ b/ClientSide/account.html
@@ -9,7 +9,7 @@
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="stylesheet.css">
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <title>Welcome</title>
+    <title>Account</title>
 
     <script>
         $(document).ready(function () {
@@ -77,10 +77,10 @@
             <form action="phpscripts/createNewUser.php" method="post">
                 <p>Ihr Name: <input type="text" name="name" /></p>
                 <p>Ihr Vorname: <input type="text" name="preName" /></p>
-                <p>Ihr Geburtsdatum: <input type="text" name="birthday" /></p>
+                <p>Ihr Geburtsdatum: <input type="date" name="birthday" /></p>
                 <p>Ihre Land: <input type="text" name="country" /></p>
                 <p>Ihre Adresse: <input type="text" name="adress" /></p>
-                <p>Ihre Email: <input type="text" name="email" /></p>
+                <p>Ihre Email: <input type="email" name="email" /></p>
                 <p>Ihr Passwort: <input type="text" name="password" /></p>
                 <p>Ihre Postleitzahl: <input type="text" name="zip" /></p>
                 <p><input type="submit" /></p>
