index.php scroll fix
fix

--- a/ClientSide/account.html
+++ b/ClientSide/account.html
@@ -44,7 +44,7 @@
                                 style="max-width: 80%; max-height:80%"></a>
                     </li>
                     <li class="dropdown nav-item nav-item2" style="margin-top: 7px;">
-                        <a href=""><img src="Pictures/Icon awesome-shopping-basket.svg" alt=""
+                        <a href="phpscripts/index.php"><img src="Pictures/Icon awesome-shopping-basket.svg" alt=""
                                 style="max-width: 80%; max-height:80%"></a>
                     </li>
                     <li class="nav-item dropdown nav-item2" style="margin-top: 4px;">
