new checkout and order in database

--- a/ClientSide/account.html
+++ b/ClientSide/account.html
@@ -74,7 +74,7 @@
                 <p>Ihre Land: <input type="text" name="country" /></p>
                 <p>Ihre Adresse: <input type="text" name="adress" /></p>
                 <p>Ihre Email: <input type="text" name="email" /></p>
-                <p>Ihr Passwort: <input type="password" name="passwd" /></p>
+                <p>Ihr Passwort: <input type="text" name="passwd" /></p>
                 <p>Ihre Postleitzahl: <input type="text" name="zip" /></p>
                 <p><input type="submit" /></p>
             </form>
