--- a/ClientSide/index.html
+++ b/ClientSide/index.html
@@ -11,7 +11,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@300;400;600&display=swap" rel="stylesheet">
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <title>Shopping Cart</title>
+    <title>Welcome</title>
 
     <script>
         $(document).ready(function() {
@@ -35,15 +35,10 @@
                     <li class="nav-item nav-item2 btn-hovereffect rounded-pill active-btn"><a class="nav-link" href="index.html">Welcome</a></li>
                     <li class="nav-item nav-item2 btn-hovereffect rounded-pill"><a class="nav-link" href="phpscripts/index.php">Shop</a>
                     </li>
-                    <li class="nav-item nav-item2 btn-hovereffect rounded-pill"><a class="nav-link" href="account.html">Account</a>
-                    </li>
                 </ul>
                 <ul class="navbar-nav ml-auto icon-resize">
-                    <li class="dropdown nav-item nav-item2" style="margin-top: 10px;">
-                        <a href=""><img src="Pictures/Icon material-account-circle.svg" alt="" style="max-width: 80%; max-height:80%"></a>
-                    </li>
                     <li class="dropdown nav-item nav-item2" style="margin-top: 7px;">
-                        <a href=""><img src="Pictures/Icon awesome-shopping-basket.svg" alt="" style="max-width: 80%; max-height:80%"></a>
+                        <a href="phpscripts/index.php"><img src="Pictures/Icon awesome-shopping-basket.svg" alt="" style="max-width: 80%; max-height:80%"></a>
                     </li>
                     <li class="nav-item dropdown nav-item2" style="margin-top: 4px;">
                         <a class="nav-link" href="#" id="navbarDropdown" role="button" aria-haspopup="true" aria-expanded="false">
@@ -52,7 +47,6 @@
                         <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
                             <a class="dropdown-item" href="index.html">Welcome</a>
                             <a class="dropdown-item" href="phpscripts/index.php">Shop</a>
-                            <a class="dropdown-item" href="account.html">Account</a>
                         </div>
                     </li>
                 </ul>
