--- a/ClientSide/thankYou.html
+++ b/ClientSide/thankYou.html
@@ -59,8 +59,8 @@
 
         </div>
 
-        <div class="col-6" id="index-main">
-            <p>Danke</p>
+        <div class="col-6" id="index-main" style="font-size: 50px; font-family: Dosis; color: rgba(0, 34, 83, 1); font-weight: bold;">
+            <p>Danke schön. <br> Ihre Bestellung wurde aufgenommen.</p>
         </div>
 
         <div class="col-3" id="index-right-backimg">
